added solution to 4th day

--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -15,3 +15,4 @@ Beside solving each problem I will be focusing on the readibility of the code.
 - [Day 1](2024-1.md)
 - [Day 2](2024-2.md)
 - [Day 3](2024-3.md)
+- [Day 4](2024-4.md)
