--- a/src/aoc/2024-5.md
+++ b/src/aoc/2024-5.md
@@ -13,6 +13,27 @@ For both cases we read the file via regex and filter out the wrong sequences and
 For the second part we consider only the incorrect ones. We go by pages and check their violations. If we find some we put the vilated pages behind the current page while removing the violated ones. And proceed by the corrected page onwards, because the pages inserted afterward may be wrong.
 
 
+```txt
+-----------
+| |X| |O| |
+-----------
+   ^   ^
+   j   k
+
+---------
+| | |O| |
+---------
+   ^ ^
+   j k
+
+
+-----------
+| | |O|X| |
+-----------
+	 ^
+	 k
+```
+
 ## main.go
 
 ```go
