--- a/src/aoc/2024-2.md
+++ b/src/aoc/2024-2.md
@@ -101,7 +101,7 @@ func part1() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
 func part2() {
@@ -115,7 +115,7 @@ func part2() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
 func main() {
