--- a/src/aoc/2024-3.md
+++ b/src/aoc/2024-3.md
@@ -46,7 +46,7 @@ func part1() {
     result += nr1 * nr2
   }
   end := time.Now()
-  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
 func part2() {
@@ -71,7 +71,7 @@ func part2() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
 func main() {
