--- a/src/aoc/2024-5.md
+++ b/src/aoc/2024-5.md
@@ -142,7 +142,7 @@ func part1() {
     result += cor[len(cor)/2]
   }
   end := time.Now()
-  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
 func part2() {
@@ -154,7 +154,7 @@ func part2() {
     result += fix(rules, inc)[len(inc)/2]
   }
   end := time.Now()
-  fmt.Println("Part 2 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
 func main() {
