--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -17,3 +17,4 @@ Beside solving each problem I will be focusing on the readibility of the code.
 - [Day 3](2024-3.md)
 - [Day 4](2024-4.md)
 - [Day 5](2024-5.md)
+- [Day 6](2024-6.md)
