added solution for aoc

--- a/src/aoc/2024-6.md
+++ b/src/aoc/2024-6.md
@@ -142,6 +142,7 @@ func part2() {
       result += 1
     }
   }
+  close(c)
   end := time.Now()
   fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
