--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -19,3 +19,4 @@ Beside solving each problem I will be focusing on the readibility of the code.
 - [Day 5](2024-5.md)
 - [Day 6](2024-6.md)
 - [Day 7](2024-7.md)
+- [Day 8](2024-8.md)
