updated aoc and boot

--- a/src/aoc/2021-1.md
+++ b/src/aoc/2021-1.md
@@ -2,80 +2,91 @@
 
 This is a solution of the [day 1](https://adventofcode.com/2021/day/1). Go back to year [2021](2021.md). Go back to [AOC](../adventofcode.md).
 
-## first-part.cpp
+### Information
 
-```cpp
-#include<fstream>
-#include<string>
-#include<iostream>
+#### Part 1
 
-int main(int argc, char ** argv){
-  std::fstream stream;
-  stream.open("INPUT");
-  std::string line;
-  int last = -1;
-  int increase = 0;
-  while(getline(stream, line)){
-    int new_ = std::stoi(line);
-    if (last != -1 && last < new_){
-      increase += 1;
+Generally we create a window of `n` elements and set their size. We proceed from `n`-th element and check if the sum of the new window is greater or not and update the sum and window. For part one the window has size `1`.
+
+#### Part 2
+
+For the second part we set `n` to `3`.
+
+## main.go
+
+```go
+package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "regexp"
+  "strconv"
+  "time"
+)
+
+func read_file(file_path string) []int {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  regex := regexp.MustCompile("([0-9]+)")
+  found := regex.FindAllStringSubmatch(string(content), -1)
+  array := make([]int, len(found))
+  for i, f := range found {
+    array[i], _ = strconv.Atoi(f[1])
+  }
+  return array
+}
+
+func slide(start []int) func(int) bool {
+  window := start
+  sum := 0
+  for _, ele := range window {
+    sum += ele
+  }
+  return func(ele int) bool {
+    new_sum := sum - window[0] + ele
+    window = append(window[1:], ele)
+    res := new_sum > sum
+    sum = new_sum
+    return res
+  }
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  array := read_file("INPUT")
+  s := slide(array[:1])
+  for i := 1; i < len(array); i++ {
+    if s(array[i]) {
+      result += 1
     }
-    last = new_;
   }
-  std::cout << increase << std::endl;
-  return 0;
-}
-```
-
-## second-part.cpp
-
-```cpp
-#include<fstream>
-#include<string>
-#include<iostream>
-#include<array>
-
-void prepare_file(){
-  std::fstream stream;
-  std::ofstream file;
-  file.open("output.txt");
-  stream.open("input.txt");
-  std::string line;
-  std::array<int, 3> list = {0};
-  while(getline(stream, line)){
-      int new_ = stoi(line);
-      int i = 0;
-      list[0] += new_;
-      file << list[0] << std::endl;
-      list[1] += new_;
-      list[2] += new_;
-      list[0] = list[1];
-      list[1] = list[2];
-      list[2] = 0;
-  }
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-int count(){
-  std::fstream stream;
-  stream.open("output.txt");
-  std::string line;
-  int last = -1;
-  int increase = -2;
-  while(getline(stream, line)){
-    int new_ = std::stoi(line);
-    if (last != -1 && last < new_){
-      increase += 1;
+func part2() {
+  var result int
+  start := time.Now()
+  array := read_file("INPUT")
+  s := slide(array[:3])
+  for i := 3; i < len(array); i++ {
+    if s(array[i]) {
+      result += 1
     }
-    last = new_;
   }
-  return increase;
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
-int main(int argc, char ** argv){
-  prepare_file();
-  int result = count();
-  std::cout << result << std::endl;
-  return 0;
+func main() {
+  fmt.Println("Year 2021 day 1 - Sonar Sweep")
+  part1()
+  part2()
 }
 ```
 
