--- a/src/aoc/2021-2.md
+++ b/src/aoc/2021-2.md
@@ -2,36 +2,104 @@
 
 This is a solution of the [day 2](https://adventofcode.com/2021/day/2). Go back to year [2021](2021.md). Go back to [AOC](../adventofcode.md).
 
-## main.cpp
+### Information
 
-```cpp
-#include<iostream>
-#include<fstream>
-#include<string>
+#### Part 1
 
-int main(int argc, char * * argv){
-  std::ifstream stream;
-  stream.open("INPUT");
-  std::string line;
-  int depth = 0;
-  int forward = 0;
-  int aim = 0;
-  while(getline(stream, line)){
-    int now = std::stoi(line.substr(line.length()-2, line.length()-1));
-    if (line[0] == 'u'){
-      aim -= now;
-    }
-    else if (line[0] == 'f'){
-      forward += now;
-      depth += (aim*now);
-    }
-    else{
-      aim += now;
+In the first part we simply calculate the depth and forward position. The parsing is done via `regex`.
+
+#### Part 2
+
+For the second part we use the provided calculation using aim.
+
+
+## main.go
+
+```go
+package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "regexp"
+  "strconv"
+  "time"
+)
+
+type Instruction struct {
+  instruction string
+  value       int
+}
+
+func read_file(file_path string) []Instruction {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  regex := regexp.MustCompile("(forward|up|down) ([0-9])")
+  found := regex.FindAllStringSubmatch(string(content), -1)
+  instructions := make([]Instruction, len(found))
+  for i, f := range found {
+    nr, _ := strconv.Atoi(f[2])
+    instructions[i] = Instruction{f[1], nr}
+  }
+  return instructions
+}
+
+func compute(instructions []Instruction) int {
+  depth, forward := 0, 0
+  for _, instruction := range instructions {
+    switch instruction.instruction {
+    case "up":
+      depth -= instruction.value
+    case "down":
+      depth += instruction.value
+    case "forward":
+      forward += instruction.value
     }
   }
-  std::cout << "Depth: " << depth << ", forward: " << forward << std::endl;
-  long mult = depth*forward;
-  std::cout << mult << std::endl; 
+  return depth * forward
+}
+
+func compute_aim(instructions []Instruction) int {
+  depth, forward, aim := 0, 0, 0
+  for _, instruction := range instructions {
+    switch instruction.instruction {
+    case "up":
+      aim -= instruction.value
+    case "down":
+      aim += instruction.value
+    case "forward":
+      forward += instruction.value
+      depth += aim * instruction.value
+    }
+  }
+  return depth * forward
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  instructions := read_file("INPUT")
+  result = compute(instructions)
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  instructions := read_file("INPUT")
+  result = compute_aim(instructions)
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2021 day 2 - Dive!")
+  part1()
+  part2()
 }
 ```
 
