--- a/src/aoc/2021-3.md
+++ b/src/aoc/2021-3.md
@@ -2,199 +2,122 @@
 
 This is a solution of the [day 3](https://adventofcode.com/2021/day/3). Go back to year [2021](2021.md). Go back to [AOC](../adventofcode.md).
 
-## first-part.cpp
+### Information
 
-```cpp
-#include<iostream>
-#include<fstream>
-#include<string>
-#include<array>
+#### Part 1
 
-int main(int argc, char * * argv){
-    std::fstream stream;
-    stream.open("INPUT");
-    std::string line;
-    const size_t length = 12;
-    std::array<int, length> ones = {0};
-    std::array<int, length> zeros = {0};
-    int gamma = 0;
-    int epsilon = 0;
-    while(getline(stream, line)){
-        for (size_t i = 0; i < length; ++i){
-            if (line[i] == '0'){
-                if (ones[i] >= 1){
-                    ones[i] -= 1;
-                }
-                else{
-                    zeros[i] += 1;
-                }
-            }
-            else if (line[i] == '1'){
-                if (zeros[i] >= 1){
-                    zeros[i] -= 1;
-                }
-                else{
-                    ones[i] += 1;
-                }
-            }
-        }
+In the first part we compute gamma and epsilon by computing number of ones. This determines the most significant bit among all lines. Then we compute the number from such binary representation.
+
+#### Part 2
+
+In the second part we also compute the most significant bit and filter lines. Then get the number from binary representation and multiply both cases.
+
+## main.go
+
+```go
+package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "strconv"
+  "strings"
+  "time"
+)
+
+func read_file(file_path string) []string {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  lines := strings.Split(string(content), "\n")
+  for i, line := range lines {
+    if len(line) == 0 {
+      lines = append(lines[:i], lines[i+1:]...)
     }
-    int two = 2048; //16;
-    int max = 0;
-    for (size_t j = 0; j < length; ++j){
-        if (zeros[j] == 0){
-            gamma += two;
-        }
-        else if (ones[j] == 0){
-            epsilon += two;
-        }
-        max += two;
-        two /= 2;
-    }
-    std::cout << "Gamma: " << gamma << std::endl;
-    std::cout << "Epsilon: " << epsilon << std::endl;
-    std::cout << "Max: " << max << std::endl;
-    std::cout << "Sum: " << gamma + epsilon << std::endl;
-    long compute = epsilon*gamma;
-    std::cout << compute << std::endl;  
-    return 0;
-}
-```
-
-## second-part.cpp
-
-```cpp
-#include<iostream>
-#include<fstream>
-#include<string>
-#include<array>
-
-int write_file(std::string finput, std::string foutput, int compare, char comparison){
-    std::ifstream input;
-    std::ofstream output;
-    input.open(finput);
-    output.open(foutput);
-    std::string line;
-    int number = 0;
-    while(getline(input, line)){
-        if (line[compare] == comparison){
-            output << line << std::endl;
-            ++number;
-        }
-    }
-    return number;
+  }
+  return lines
 }
 
-void compute(std::string f1, std::string f2){
-    std::ifstream i1;
-    std::ifstream i2;
-    i1.open(f1);
-    i2.open(f2);
-    std::string line;
-    size_t p;
-    getline(i1, line);
-    int first = stoi(line, &p, 2);
-    getline(i2, line);
-    int second = stoi(line, &p, 2);
-    std::cout << "First: " << first << std::endl;
-    std::cout << "Second: " << second << std::endl;
-    std::cout << first*second << std::endl;
+func number_of_ones(lines []string, index int) int {
+  number_of_ones := 0
+  for _, line := range lines {
+    if line[index] == '0' {
+      number_of_ones -= 1
+    } else {
+      number_of_ones += 1
+    }
+  }
+  return number_of_ones
 }
 
-char filter_most(std::string file, int i){
-    std::fstream stream;
-    stream.open(file);
-    std::string line;
-    const size_t length = 12;
-    int ones = 0;
-    int zeros = 0;
-    while(getline(stream, line)){
-        if (line[i] == '0'){
-            if (ones >= 1){
-                ones -= 1;
-            }
-            else{
-                zeros += 1;
-            }
-        }
-        else if (line[i] == '1'){
-            if (zeros >= 1){
-                zeros -= 1;
-            }
-            else{
-                ones += 1;
-            }
-        }
+func significants(lines []string) int {
+  gamma, epsilon := 0, 0
+  acc := 1
+  for j := len(lines[0]) - 1; j >= 0; j-- {
+    if number_of_ones(lines, j) > 0 {
+      gamma += acc
+    } else {
+      epsilon += acc
     }
-    if (zeros == 0){
-        return '1';
-    }
-    else{
-        return '0';
-    }
+    acc *= 2
+  }
+  return gamma * epsilon
 }
 
-char filter_least(std::string file, int i){
-    std::fstream stream;
-    stream.open(file);
-    std::string line;
-    const size_t length = 12;
-    int ones = {0};
-    int zeros = {0};
-    while(getline(stream, line)){
-        if (line[i] == '0'){
-            if (ones >= 1){
-                ones -= 1;
-            }
-            else{
-                zeros += 1;
-            }
-        }
-        else if (line[i] == '1'){
-            if (zeros >= 1){
-                zeros -= 1;
-            }
-            else{
-                ones += 1;
-            }
-        }
+func filter(lines []string, rule func(int, byte) bool) int {
+  for i := 0; i < len(lines[0]); i++ {
+    number_of_ones := number_of_ones(lines, i)
+    for j := 0; j < len(lines); j++ {
+      if rule(number_of_ones, lines[j][i]) {
+        lines = append(lines[:j], lines[j+1:]...)
+        j--
+      }
     }
-    if (zeros == 0){
-        return '0';
+    if len(lines) == 1 {
+      nr, _ := strconv.ParseInt(lines[0], 2, 64)
+      return int(nr)
     }
-    else{
-        return '1';
-    }
+  }
+  return 0
 }
 
-int main(int argc, char * * argv){
-    std::string first = "1";
-    std::string second = "2";
-    char gamma = filter_most(first, 0);
-    int i = 0;
-    while (write_file(first, second, i, gamma) > 1){
-        std::string temp = second;
-        second = first;
-        first = temp;
-        ++i;
-        gamma = filter_most(first, i);
-    }
-    first = "3";
-    second = "4";
-    char epsilon = filter_least(first, 0);
-    i = 0;
-    while (write_file(first, second, i, epsilon) > 1){
-            std::string temp = second;
-            second = first;
-            first = temp;
-            ++i;
-            epsilon = filter_least(first, i);
-        }
-    first = "3";
-    second = "1";
-    compute(first, second);
-    return 0;
+func oxygen(lines []string) int {
+  rule := func(number_of_ones int, bit byte) bool {
+    return (number_of_ones >= 0 && bit == '0') || (number_of_ones < 0 && bit == '1')
+  }
+  return filter(lines, rule)
 }
 
+func co2(lines []string) int {
+  rule := func(number_of_ones int, bit byte) bool {
+    return (number_of_ones < 0 && bit == '0') || (number_of_ones >= 0 && bit == '1')
+  }
+  return filter(lines, rule)
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  lines := read_file("INPUT")
+  result = significants(lines)
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  result = oxygen(read_file("INPUT")) * co2(read_file("INPUT"))
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2021 day 3 - Binary Diagnostic")
+  part1()
+  part2()
+}
 ```
 
