--- a/src/aoc/2021-4.md
+++ b/src/aoc/2021-4.md
@@ -2,267 +2,159 @@
 
 This is a solution of the [day 4](https://adventofcode.com/2021/day/4). Go back to year [2021](2021.md). Go back to [AOC](../adventofcode.md).
 
-## first-part.cpp
+### Information
 
-```cpp
-#include<iostream>
-#include<fstream>
-#include<string>
-#include<array>
-#include<vector>
+#### Part 1
 
-struct Square{
-    public:
-        int number;
-        bool used;
-};
+In the first part we iterate over the numbers and fill in the bingo cards and check if it is winning, if so compute the value and multiply it by the drawn number.
 
-using board = std::array< std::array < Square, 5>, 5>;
+#### Part 2
 
-void read(std::vector<int>& numbers, std::vector<board>& boards){
-    std::ifstream file;
-    file.open("INPUT");
-    std::string line;
-    bool first = true;
-    while (getline(file, line)){
-        if (first){
-            for (size_t i = 0; i < line.length(); ++i){
-                size_t shift = 0;
-                int now = std::stoi(line.substr(i, line.length()), &shift);
-                i += shift;
-                numbers.push_back(now);
-            }
-            first = false;
-            getline(file, line);
+In the second part use the same procedure, only cycle through the winning boards, since multiple boards can win in with the same number.
+
+
+## main.go
+
+```go
+package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "strconv"
+  "strings"
+  "time"
+)
+
+type Box struct {
+  value int
+  mark  bool
+}
+
+type Bingo [5][5]Box
+
+func empty_bingo() Bingo {
+  var bingo Bingo
+  return bingo
+}
+
+func read_file(file_path string) ([]int, []Bingo) {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  counter := 0
+  var numbers []int
+  var bingos []Bingo
+  for _, line := range strings.Split(string(content), "\n") {
+    if len(line) == 0 {
+      continue
+    }
+    space_splited := strings.Split(line, " ")
+    comma_splited := strings.Split(line, ",")
+    if len(comma_splited) > 1 {
+      for _, nbr_string := range comma_splited {
+        nr, _ := strconv.Atoi(nbr_string)
+        numbers = append(numbers, nr)
+      }
+    } else {
+      if counter%5 == 0 {
+        bingos = append(bingos, empty_bingo())
+      }
+      j := 0
+      for i := 0; i < len(space_splited); i++ {
+        if len(space_splited[i]) == 0 {
+          continue
         }
-        else{
-            board temp;
-            for (size_t j = 0; j < 5; ++j){
-                size_t l = 0;
-                for (size_t i = 0; i < line.length(); ++i){
-                    Square sq;
-                    size_t shift;
-                int now = std::stoi(line.substr(i, line.length()), &shift);
-                    i += shift;
-                sq.number = now;
-                    temp[j][l] = sq;
-                    ++l;
-                }
-                getline(file, line);
-            }
-            boards.push_back(temp);
+        nr, _ := strconv.Atoi(space_splited[i])
+        bingos[counter/5][counter%5][j] = Box{nr, false}
+        j++
+      }
+      counter++
+    }
+  }
+  return numbers, bingos
+}
+
+func is_winning(bingo Bingo) bool {
+  for i, row := range bingo {
+    is_row_winning := true
+    is_column_winning := true
+    for j, ele := range row {
+      is_row_winning = is_row_winning && ele.mark
+      is_column_winning = is_column_winning && bingo[j][i].mark
+    }
+    if is_row_winning || is_column_winning {
+      return true
+    }
+  }
+  return false
+}
+
+func value_of_bingo(bingo Bingo) int {
+  result := 0
+  for _, row := range bingo {
+    for _, ele := range row {
+      if !ele.mark {
+        result += ele.value
+      }
+    }
+  }
+  return result
+}
+
+func draw_number(bingos []Bingo, number int) (int, int, bool) {
+  for k, bingo := range bingos {
+    for i, row := range bingo {
+      for j, ele := range row {
+        if number == ele.value {
+          bingos[k][i][j].mark = true
         }
+      }
     }
-}
-
-bool check (board& brd){
-    std::array<bool, 5> rows = {true, true, true, true, true};
-    std::array<bool, 5> columns = {true, true, true, true, true};
-    bool succes = false;
-    for (size_t i = 0; i < 5; ++i){
-        for (size_t j = 0; j < 5; ++j){
-            rows[i] = rows[i] && brd[i][j].used;
-            columns[j] = columns[j] && brd[i][j].used;
-        }
+    if is_winning(bingos[k]) {
+      return number * value_of_bingo(bingos[k]), k, true
     }
-    for (size_t i = 0; i < 5; ++i){
-        succes = succes || rows[i];
-        succes = succes || columns[i];
+  }
+  return 0, -1, false
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  numbers, bingos := read_file("INPUT")
+  for _, number := range numbers {
+    val, _, win := draw_number(bingos, number)
+    if win {
+      result = val
+      break
     }
-    return succes;
+  }
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-int calculate(int number, board& brd){
-    int result = 0;
-    for (size_t i = 0; i < 5; ++i){
-        for (size_t j = 0; j < 5; ++j){
-            if (!brd[i][j].used){
-                result += brd[i][j].number;
-            }
-        }
+func part2() {
+  var result int
+  start := time.Now()
+  numbers, bingos := read_file("INPUT")
+  for _, number := range numbers {
+    val, index, win := draw_number(bingos, number)
+    for win {
+      bingos = append(bingos[:index], bingos[index+1:]...)
+      result = val
+      val, index, win = draw_number(bingos, number)
     }
-    std::cout << "Sum: " << result << std::endl;
-    result *= number;
-    return result;
+  }
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
-void print_matrix(board& brd){
-std::cout << "Matrix:" << std::endl;
-for (size_t i = 0; i < 5; ++i){
-    for (size_t j = 0; j < 5; ++j){
-            std::cout << brd[i][j].number << ":" << brd[i][j].used << " ";
-    }
-std::cout << std::endl;
-}
-}
-
-int compute(std::vector<int>& numbers, std::vector<board>& boards){
-    for (auto& num : numbers){
-        for (auto& brd : boards){
-            for (size_t i = 0; i < 5; ++i){
-                for (size_t j = 0; j < 5; ++j){
-                    if(brd[i][j].number == num){
-                        brd[i][j].used = true;          
-                    }
-                }
-            }
-            if (check(brd)){
-                std::cout << "Number: " << num << std::endl;
-                print_matrix(brd);
-                return calculate(num, brd);
-            }
-        }
-    }
-    return 0;
-}
-
-int main(int argc, char * * argv){
-    std::vector<int> numbers;
-    std::vector<board> boards;
-    read(numbers, boards);
-    int result = compute(numbers, boards);
-    std::cout << result << std::endl;
-    return 0;
-}
-```
-
-## second-part.cpp
-
-```cpp
-#include<iostream>
-#include<fstream>
-#include<string>
-#include<array>
-#include<vector>
-
-struct Square{
-    public:
-        int number;
-        bool used;
-};
-
-using board = std::array< std::array < Square, 5>, 5>;
-
-void read(std::vector<int>& numbers, std::vector<board>& boards){
-    std::ifstream file;
-    file.open("input.txt");
-    std::string line;
-    bool first = true;
-    while (getline(file, line)){
-        if (first){
-            for (size_t i = 0; i < line.length(); ++i){
-                size_t shift = 0;
-                int now = std::stoi(line.substr(i, line.length()), &shift);
-                i += shift;
-                numbers.push_back(now);
-            }
-            first = false;
-            getline(file, line);
-        }
-        else{
-            board temp;
-            for (size_t j = 0; j < 5; ++j){
-                size_t l = 0;
-                for (size_t i = 0; i < line.length(); ++i){
-                    Square sq;
-                    size_t shift;
-                int now = std::stoi(line.substr(i, line.length()), &shift);
-                    i += shift;
-                sq.number = now;
-                    temp[j][l] = sq;
-                    ++l;
-                }
-                getline(file, line);
-            }
-            boards.push_back(temp);
-        }
-    }
-}
-
-bool check (board& brd){
-    std::array<bool, 5> rows = {true, true, true, true, true};
-    std::array<bool, 5> columns = {true, true, true, true, true};
-    bool succes = false;
-    for (size_t i = 0; i < 5; ++i){
-        for (size_t j = 0; j < 5; ++j){
-            rows[i] = rows[i] && brd[i][j].used;
-            columns[j] = columns[j] && brd[i][j].used;
-        }
-    }
-    for (size_t i = 0; i < 5; ++i){
-        succes = succes || rows[i];
-        succes = succes || columns[i];
-    }
-    return succes;
-}
-
-int calculate(int number, board& brd){
-    int result = 0;
-    for (size_t i = 0; i < 5; ++i){
-        for (size_t j = 0; j < 5; ++j){
-            if (!brd[i][j].used){
-                result += brd[i][j].number;
-            }
-        }
-    }
-    std::cout << "Sum: " << result << std::endl;
-    result *= number;
-    return result;
-}
-
-void print_matrix(board& brd){
-std::cout << "Matrix:" << std::endl;
-for (size_t i = 0; i < 5; ++i){
-    for (size_t j = 0; j < 5; ++j){
-            std::cout << brd[i][j].number << ":" << brd[i][j].used << " ";
-    }
-std::cout << std::endl;
-}
-}
-
-int compute(std::vector<int>& numbers, std::vector<board>& boards){
-    std::array<bool, 100> used_boards;
-    int left = 100;
-    board last;
-    int lastnum;
-    for (auto& num : numbers){
-        int index = 0;
-        for (auto& brd : boards){
-            if (!used_boards[index]){
-                for (size_t i = 0; i < 5; ++i){
-                    for (size_t j = 0; j < 5; ++j){
-                        if(brd[i][j].number == num){
-                            brd[i][j].used = true;          
-                        }
-                    }
-                }
-                if (check(brd)){
-                    --left;
-                    used_boards[index] = true;
-                    last = brd;
-                    lastnum = num;
-                    if (left == 0){
-                        std::cout << "Number: " << num << std::endl;
-                        print_matrix(brd);
-                        return calculate(num, brd);
-                    }
-                }
-            }
-            ++index;
-        }
-    }
-    std::cout << "Number: " << lastnum << std::endl;
-    print_matrix(last);
-    return calculate(lastnum, last);
-}
-
-int main(int argc, char * * argv){
-    std::vector<int> numbers;
-    std::vector<board> boards;
-    read(numbers, boards);
-    int result = compute(numbers, boards);
-    std::cout << result << std::endl;
-    return 0;
+func main() {
+  fmt.Println("Year 2021 day 4 - Giant Squid")
+  part1()
+  part2()
 }
 ```
 
