--- a/src/aoc/2021-7.md
+++ b/src/aoc/2021-7.md
@@ -2,26 +2,90 @@
 
 This is a solution of the [day 7](https://adventofcode.com/2021/day/7). Go back to year [2021](2021.md). Go back to [AOC](../adventofcode.md).
 
-## first-part.py
+### Information
 
-```py
-#!/usr/bin/env python3
+#### Part 1
 
-with open("input.txt") as f:
-    line = f.readline()
-    separated = line.split(",")
-    integers = []
-    for box in separated:
-        integers.append(int(box))
-    integers.sort()
-    middle = integers[len(integers)//2]
-    print(middle)
-    sum = 0
-    for sub in integers:
-        if sub <= middle:
-            sum += (middle - sub)
-        else:
-            sum += (sub - middle)
-    print(sum)
+In both cases we try all possibilities and find the optimum.
+
+#### Part 2
+
+In the second part we only need to rewrite the operator for computing the distance.
+
+
+## main.go
+
+```go
+package main
+
+import (
+  "fmt"
+  "log"
+  "math"
+  "os"
+  "regexp"
+  "sort"
+  "strconv"
+  "time"
+)
+
+func read_file(file_path string) []int {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  regex := regexp.MustCompile("[0-9]+")
+  found := regex.FindAllString(string(content), -1)
+  var horizontal_positions []int
+  for _, f := range found {
+    nr, _ := strconv.Atoi(f)
+    horizontal_positions = append(horizontal_positions, nr)
+  }
+  return horizontal_positions
+}
+
+func optimize_distance(numbers []int, op func(int, int) int) int {
+  sort.Ints(numbers)
+  result := op(numbers[0], numbers[len(numbers)-1]) * len(numbers)
+  for x := numbers[0]; x < numbers[len(numbers)-1]; x++ {
+    sum := 0
+    for _, pos := range numbers {
+      sum += op(x, pos)
+    }
+    if sum < result {
+      result = sum
+    }
+  }
+  return result
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  horizontal_positions := read_file("INPUT")
+  dist := func(x, y int) int { return int(math.Abs(float64(x - y))) }
+  result = optimize_distance(horizontal_positions, dist)
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  horizontal_positions := read_file("INPUT")
+  scaled_dist := func(x, y int) int {
+    diff := int(math.Abs(float64(x - y)))
+    return (diff * (diff + 1)) / 2
+  }
+  result = optimize_distance(horizontal_positions, scaled_dist)
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2021 day 7 - The Treachery of Whales")
+  part1()
+  part2()
+}
 ```
 
