--- a/src/aoc/2021-6.md
+++ b/src/aoc/2021-6.md
@@ -2,24 +2,83 @@
 
 This is a solution of the [day 6](https://adventofcode.com/2021/day/6). Go back to year [2021](2021.md). Go back to [AOC](../adventofcode.md).
 
-## first-part.py
+### Information
 
-```py
-#!/usr/bin/env python3
+#### Part 1
 
-with open("INPUT") as f:
-    line = f.readline()
-    splitted = line.split(',')
-    integers = []
-    for box in splitted:
-        integers.append(int(box))
-    for i in range(80):
-        for i in range(len(integers)):
-            integers[i] -= 1
-            if integers[i] == -1:
-                integers[i] = 6
-                integers.append(8)
-    sum = len(integers)
-    print(sum)
+We setup an array of lanternfish based on their days until new reproduction cycle starts. Then we add the number of lanternfish which will reproduce to the end and also to the reset index. We will run this for `80` days.
+
+#### Part 2
+
+We use the same simulation, only run it for `256` days.
+
+## main.go
+
+```go
+package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "regexp"
+  "strconv"
+  "time"
+)
+
+func read_file(file_path string) [9]int {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  regex := regexp.MustCompile("[0-9]+")
+  found := regex.FindAllString(string(content), -1)
+  var lanternfish [9]int
+  for _, f := range found {
+    index, _ := strconv.Atoi(f)
+    lanternfish[index] += 1
+  }
+  return lanternfish
+}
+
+func simulate_life(lanternfish [9]int, days int) int {
+  for i := 0; i < days; i++ {
+    first := lanternfish[0]
+    for j := 1; j < len(lanternfish); j++ {
+      lanternfish[j-1] =lanternfish[j]
+    }
+    lanternfish[8] = first
+    lanternfish[6] += first
+  }
+  sum := 0
+  for i := 0; i < len(lanternfish); i++ {
+    sum += lanternfish[i]
+  }
+  return sum
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  lanternfish := read_file("INPUT")
+  result = simulate_life(lanternfish, 80)
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  lanternfish := read_file("INPUT")
+  result = simulate_life(lanternfish, 256)
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2021 day 6 - Lanternfish")
+  part1()
+  part2()
+}
 ```
 
