--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -20,3 +20,4 @@ Beside solving each problem I will be focusing on the readibility of the code.
 - [Day 6](2024-6.md)
 - [Day 7](2024-7.md)
 - [Day 8](2024-8.md)
+- [Day 9](2024-9.md)
