added aoc pages

--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -21,3 +21,4 @@ Beside solving each problem I will be focusing on the readibility of the code.
 - [Day 7](2024-7.md)
 - [Day 8](2024-8.md)
 - [Day 9](2024-9.md)
+- [Day 10](2024-10.md)
