--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -22,3 +22,4 @@ Beside solving each problem I will be focusing on the readibility of the code.
 - [Day 8](2024-8.md)
 - [Day 9](2024-9.md)
 - [Day 10](2024-10.md)
+- [Day 11](2024-11.md)
