updated aoc page

--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -4,11 +4,9 @@ This contains tasks from the [year 2024](https://adventofcode.com/2024). Go back
 
 ### Information
 
-In this years advent of code I will try to use `go` [programming languange](https://go.dev) to solve all problems. Lets see how far I will get by doing so.
+In this years advent of code I will try to use `go` [programming language](https://go.dev) to solve all problems. Lets see how far I will get by doing so.
 
-Beside solving each problem I will be focusing on the readibility of the code.
-
-![Gopher this is fine](https://raw.githubusercontent.com/MariaLetta/free-gophers-pack/master/illustrations/png/2.png)
+Beside solving each problem I will be focusing on the readability of the code.
 
 ### Days
 
