--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -21,3 +21,4 @@ Beside solving each problem I will be focusing on the readability of the code.
 - [Day 9](2024-9.md)
 - [Day 10](2024-10.md)
 - [Day 11](2024-11.md)
+- [Day 12](2024-12.md)
